# swagger/swagger.yaml
@@ -237,10 +237,13 @@ paths:
               properties:
                 success:
                   type: boolean
-                  description: 'True if mintistry was able to lodge the transaction on the ethereum blockchain.'
+                  description: 'True if mintistry was able to lodge the transaction on the ethereum blockchain, otherwise false'
                 message:
                   type: string
                   description: 'A string containing information about the status of the request and hints for further use.'
+                transaction_hash:
+                  type: string
+                  description: 'Hash of the transaction on the ethereum blockchain when transaction was successful, otherwise empty/null.'
                 sender_addr:
                   type: string
                   description: "Ethereum address of receiver. (created with /newAddress)"
